--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,17 @@
 html{
     background-color:black;
+    color:red;
+    height:100%
 }
 
 img{
-    height:300px;
-    width:200px;
+   height:100px;
+   width:100px;
   
   
 
 }
+
 
 h3{
 
